Bug fix: Adjust alignment of objects on main screen
Fixed some issues with the alignment and placement of objects on the
main Recorder screen. Also set the display to standalone so we don't
have to account for scroll bars (as much)

--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,8 @@ a:visited {
 a.logo {
   text-decoration: none;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  place-items: center;
 }
 
 a.logo div {
@@ -32,7 +32,7 @@ a.logo div {
 img.logo-file {
   height: 100px;
   width: 100px;
-  margin: 10px;
+  margin-right: 10px;
 }
 
 div#root {
@@ -48,7 +48,7 @@ header {
   top: 0;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  align-items: center;
   background-color: black;
 }
 
