--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,6 +1,6 @@
 footer {
     display: flex;
-    padding: 20px 10px 10px 10px;
+    padding: 20px 10px 20px 10px;
     place-content: center;
     background-color: rgba(0, 0, 0, 0.1);
     font-size: 3rem;
