--- a/src/components/Visualizer/style.css
+++ b/src/components/Visualizer/style.css
@@ -3,5 +3,5 @@
     width: 100%;
     background-color: #fff8f000;
     width: 100%;
-    height: 60px;
+    height: 200px;
 }
